<resources>
    <string name="app_name">Cringeometer</string>
    <string name="facebook_app_id">184413571960258</string>

    <string name="app_catchphrase">on a tous nos moments génants</string>

    <string name="title_activity_intro">Login</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="intro_sub_facebook">En continuant, vous acceptez nos conditions d’utilisation et politique de confidentialité</string>

    <string name="slide_1_title">Une situation cringe arrive</string>
    <string name="slide_1_desc">Votre ami arrive… et il est malaisant</string>

    <string name="slide_2_title">Enregistrez le cringe maintenant !</string>
    <string name="slide_2_desc">Sortez cringeometer et immortalisez l\'instant</string>

    <string name="slide_3_title">Les autres aussi ont des moments cringes</string>
    <string name="slide_3_desc">Découvrez ceux du monde entier</string>

    <string name="login_title">Welcome to the CringeOMeter</string>
    <string name="login_desc">On a tous nos moments génants</string>
    <string name="login_button">Se connecter à Facebook</string>

    <string name="cringe_level_1">C\'est un petit peu génant</string>
    <string name="cringe_level_2">Je commence à rougir</string>
    <string name="cringe_level_3">Je me sens opressé</string>
    <string name="cringe_level_4">Je me met en position latérale de sécurité</string>
    <string name="cringe_level_5">A+, je pars dans le Larzac</string>

    <string name="yolo">yolo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_cringe">Ajouter un cringe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
