<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".fragment.CringeFragment">

    <include
        android:id="@+id/top_bar_layout"
        layout="@layout/include_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/cringe_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        android:gravity="center_vertical"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/top_bar_layout">

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:id="@+id/radio_group"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top">

            <Switch
                android:id="@+id/isPrivate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:text="Mettre son cringe en privée"/>

            <RadioButton android:id="@+id/choice_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radio_margin"
                android:paddingRight="20dp"
                android:layout_marginBottom="10dp"
                android:buttonTint="@color/turquoise"
                android:drawablePadding="10dp"
                android:button="@null"
                android:drawableLeft="@drawable/radio5"
                android:text="@string/cringe_level_5"/>

            <RadioButton android:id="@+id/choice_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radio_margin"
                android:paddingRight="20dp"
                android:buttonTint="@color/turquoise"
                android:button="@null"
                android:drawablePadding="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/radio4"
                android:text="@string/cringe_level_4"/>

            <RadioButton android:id="@+id/choice_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radio_margin"
                android:paddingRight="20dp"
                android:drawablePadding="10dp"
                android:buttonTint="@color/turquoise"
                android:button="@null"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/radio3"
                android:text="@string/cringe_level_3"/>

            <RadioButton android:id="@+id/choice_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radio_margin"
                android:paddingRight="20dp"
                android:buttonTint="@color/turquoise"
                android:button="@null"
                android:drawablePadding="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/radio2"
                android:text="@string/cringe_level_2"/>

            <RadioButton android:id="@+id/choice_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cringe_level_1"
                android:buttonTint="@color/turquoise"
                android:layout_marginBottom="10dp"
                android:button="@null"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/radio1"
                android:checked="false" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cringe_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/button_create_cringe"
        android:text="Publier Cringe"
        android:textColor="@color/pure_white"
        android:background="@color/blue_fab_button"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:layout_marginBottom="@dimen/margin_left_right"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/cringe_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_left_right"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:backgroundTint="@color/turquoise"
        android:hint="Quel est le sujet du cringe"
        android:layout_above="@+id/button_create_cringe"
        android:layout_alignParentStart="true" />


</RelativeLayout>
